--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -304,6 +304,9 @@ border: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* TABLETS */
@@ -410,7 +413,7 @@ padding: 16px;
         </div>
         <div id="product" class="segment">
             <h4>Product</h4>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy-1.1.png);" ></span>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
             <p>The Tsukasapo app is a premium tech support & solutions app provided as part of a device protection service for au (KDDI). </p>
         </div>
         <div id="context" class="segment">
