--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -270,7 +270,7 @@ width: 244px;
 /* CONTENT */
 /*/////////////////////////////////////////////////////////////*/
 .body{
-max-width: 768px;
+    width: 768px;
 }
 .section{
 padding: 0 0 68px 0;
@@ -317,6 +317,10 @@ display: none!important;
 }
 .container{
 padding: 40px;
+flex-direction: column;
+}
+.body{
+width: 100%;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
@@ -414,11 +418,11 @@ padding: 16px;
         <div id="product" class="segment">
             <h4>Product</h4>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
-            <p>The Tsukasapo app is a premium tech support & solutions app provided as part of a device protection service for au (KDDI). </p>
+            <p>The Tsukasapo app is a paid premium tech support & solutions service provided as part of a broader device protection service for au (KDDI). </p>
         </div>
         <div id="context" class="segment">
             <h4>Context</h4>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+            <p>Senior and Low literacy users account for x% of the .</p>
         </div>
     </div>
     <!-- Overview END -->
