--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -201,7 +201,7 @@ h4{ font-size: 1.8em;  }
 .navi a{
 opacity: 50%;    
 }
-#project ul h4 span,
+#project ul p,
 .navi nav.selected a:first-of-type,
 .navi a.selected{
 opacity: 92%;    
@@ -418,16 +418,23 @@ padding: 16px;
             <h4>Project</h4>
             <p>I work as a Senior UX Designer for the Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
             <ul>
-                <li><h4>Role <span>Senior UX Designer</span></h4></li>
-                <li><h4>Duration <span>June 2021 ~ Present</span></h4></li>
-                <li><h4>Team 
+                <li>
+                    <h4>Role</h4>
+                    <p>Senior UX Designer</p>
+                </li>
+                <li>
+                    <h4>Duration</h4>
+                    <p>June 2021 ~ Present</p>
+                </li>
+                <li>
+                    <h4>Team</h4>
                     <span class="member">UX</span>
                     <span class="member">UX</span>
                     <span class="member">UX</span>
                     <span class="member">UX</span>
                     <span class="member">UX</span>
                     <span class="member">UX</span>
-                </h4></li>
+                </li>
             </ul>
         </div>
         <div id="product" class="segment">
