--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -262,12 +262,13 @@ width: 244px;
     margin-bottom: 12px;
     border-radius: 100px;
     text-decoration none!important;
-    display: block;
+    display: inline-block;
 }
 .navi .back .icn{
     width: 36px;
-    font-size: 20px;
+    font-size: 16px;
     line-height: 36px;
+    text-align: center;
     display: block;
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -316,13 +317,13 @@ border: 0;
 /* SEGMENT */
 /*/////////////////////////////////////////////////////////////*/
 #project ul{
-    padding-top: 16px;
+    padding-top: 36px;
     list-style-type: none;
     display: flex;
     gap: 24px;
 }
 #project ul h4{
-    margin-bottom: 8px;
+    margin-bottom: 4px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* TABLETS */
