--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -325,6 +325,14 @@ border: 0;
 #project ul h4{
     margin-bottom: 4px;
 }
+#project ul span{
+    width: 24px;
+    line-height: 24px;
+    text-align: center;
+    display: inline-block;
+    border-radius: 100px;
+    margin-right: 4px;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* TABLETS */
 /*/////////////////////////////////////////////////////////////*/
