--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -209,6 +209,7 @@ opacity: 68%;
 .navi a{
 color: #000;
 }
+#project ul span,
 .special ul li h4:before{
 color: #FFF;
 }
@@ -227,6 +228,7 @@ background-color: #E9E9ED;
 .special{
 background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;
 }
+#project ul span,
 .special ul li h4:before{
 background: #88A4AA;
 }
