--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -272,8 +272,10 @@ width: 244px;
 .navi .back{
     margin-bottom: 12px;
     border-radius: 100px;
-    text-decoration none!important;
     display: inline-block;
+}
+.navi .back:hover{
+    text-decoration none!important;
 }
 .navi .back .icn{
     width: 36px;
