--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -355,9 +355,13 @@ border: 0;
 /* SPECIAL */
 
 /*/////////////////////////////////////////////////////////////*/
+.special
 .special ul{
     display: flex;
     gap: 16px;
+}
+.special{
+    padding: 24px;
 }
 .special ul li{
     width: 50%;
