--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -232,6 +232,9 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 2
 .special ul li h4:before{
 background: #88A4AA;
 }
+.special ul li{
+    background: rgba(255, 255, 255, 0.68);
+}
 /*/////////////////////////////////////////////////////////////*/
 /* BORDERS */
 /*/////////////////////////////////////////////////////////////*/
@@ -363,10 +366,19 @@ border: 0;
 .special{
     padding: 24px;
 }
+.special ul{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-content: space-between;
+  width: 400px; /* Adjust the width as needed */
+}
 .special ul li{
-    width: 50%;
-    padding: 20px;
-    border-radius: 4px;
+  width: calc(50% - 10px); /* Adjust the width as needed */
+  height: 100px; /* Adjust the height as needed */
+  margin-bottom: 10px; /* Adjust the margin as needed */
+  padding: 20px;
+  border-radius: 4px;
 }
 .special ul li h4:before{
     border-radius: 100px;
