--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -379,6 +379,7 @@ border: 0;
   margin-bottom: 10px; /* Adjust the margin as needed */
   padding: 20px;
   border-radius: 4px;
+  list-style-type: none;
 }
 .special ul li h4:before{
     border-radius: 100px;
