--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -340,6 +340,10 @@ border: 0;
     padding-top: 36px;
     list-style-type: none;
     display: flex;
+    justify-content: space-between;
+}
+#project ul li{
+flex: 1;
 }
 #project ul h4{
     margin-bottom: 4px;
