--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -374,10 +374,9 @@ flex: 1;
   flex-wrap: wrap;
   justify-content: space-between;
   align-content: space-between;
-  width: 400px; /* Adjust the width as needed */
 }
 .special ul li{
-  width: calc(50% - 10px); /* Adjust the width as needed */
+  width: calc(50% - 50px); /* Adjust the width as needed */
   height: 100px; /* Adjust the height as needed */
   margin-bottom: 10px; /* Adjust the margin as needed */
   padding: 20px;
@@ -388,6 +387,18 @@ flex: 1;
     border-radius: 100px;
     display: inline-block;
     margin-right: 8px;
+}
+.special ul li:nth-child(1) h4:before{
+    content: '1';
+}
+.special ul li:nth-child(2) h4:before{
+    content: '2';
+}
+.special ul li:nth-child(3) h4:before{
+    content: '3';
+}
+.special ul li:nth-child(4) h4:before{
+    content: '4';
 }
 /*/////////////////////////////////////////////////////////////*/
 /* TABLETS */
