--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -369,6 +369,9 @@ flex: 1;
 .special{
     padding: 24px;
 }
+.special > p{
+    margin-bottom: 36px;
+}
 .special ul{
   display: flex;
   flex-wrap: wrap;
