--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -213,6 +213,7 @@ color: #000;
 .special ul li h4:before{
 color: #FFF;
 }
+.special > p,
 h3,
 .navi nav.selected a:first-of-type,
 .navi nav .selected{
