--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -168,8 +168,8 @@ font-weight: 700;
 line-height: 140%; 
 /*font-family: Lora;*/
 }
-h3 { font-size: 2em; }
-.navi nav a:first-of-type, p{ font-size: 1.6em; }
+h2 { font-size: 2em; }
+h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 .segment h4, .navi nav a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
@@ -494,7 +494,7 @@ padding: 16px;
     
     <!-- Overview -->
     <div id="overview" class="section">
-        <h3>Intial Experience Revamp</h3>
+        <h2>Intial Experience Revamp</h2>
         <div id="project" class="segment">
             <h4>Project</h4>
             <p>I work as a Senior UX Designer for the Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
