--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -539,9 +539,18 @@ padding: 16px;
         <div id="pain-points" class="segment">
             <h4>Pain Points</h4>
             <ol>
-                <li>The apps value proposition is not clear to users.</li>
-                <li>Provisioning has many steps which require high level of user comprehension.</li>
-                <li>App UI is text rich and requires high level of user comprehension.</li>
+                <li>
+                    <h4>Value Proposition</h4>
+                    <p>The apps value proposition is not clear to users.</p>
+                </li>
+                <li>
+                    <h4>Long Provisioning</h4>
+                    <p>Provisioning has many steps which require high level of user comprehension.</p>
+                </li>
+                <li>
+                    <h4>User Comprehension</h4>
+                    <p>App UI is text rich and requires high level of user comprehension.</p>
+                </li>
             </ol>
         </div>
         <div id="goal" class="segment special">
