--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -497,7 +497,7 @@ padding: 16px;
         <h2>Intial Experience Revamp</h2>
         <div id="project" class="segment">
             <h4>Project</h4>
-            <p>I work as a Senior UX Designer for the Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
+            <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
             <ul>
                 <li>
                     <h4>Role</h4>
@@ -521,7 +521,7 @@ padding: 16px;
         <div id="product" class="segment">
             <h4>Product</h4>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
-            <p>The Tsukasapo app is a paid premium tech support & solutions service provided as part of a broader device protection service for au (KDDI). </p>
+            <p>The Tsukasapo app is a premium tech support & solutions subscription service provided as part of a broader device protection plan for au customers (KDDI). </p>
         </div>
         <div id="context" class="segment">
             <h4>Context</h4>
@@ -534,7 +534,7 @@ padding: 16px;
      <div id="definition" class="section">
         <div id="problem" class="segment">
             <h4>Problem</h4>
-            <p>The Tsukasapo service has over 4million paid users however less than 50% of users have progressed beyond the apps provisioning flow and a further drop in users is seen after day 1 viewing is completed.</p>
+            <p>The Tsukasapo service has over 4million paid subsribers however less than 50% of customers have progressed beyond the tsukasapo apps provisioning flow and a further drop in active users is seen after day 1 viewing is completed.</p>
         </div>
         <div id="pain-points" class="segment">
             <h4>Pain Points</h4>
