--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -359,6 +359,20 @@ flex: 1;
 }
 /*/////////////////////////////////////////////////////////////*/
 
+/* PAIN POINTS */
+
+/*/////////////////////////////////////////////////////////////*/
+#paint-points ol{
+    padding-top: 36px;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+}
+#paint-points ol li{
+flex: 1;
+}
+/*/////////////////////////////////////////////////////////////*/
+
 /* SPECIAL */
 
 /*/////////////////////////////////////////////////////////////*/
@@ -540,15 +554,15 @@ padding: 16px;
             <h4>Pain Points</h4>
             <ol>
                 <li>
-                    <h4>Value Proposition</h4>
+                    <h3>Value Proposition</h3>
                     <p>The apps value proposition is not clear to users.</p>
                 </li>
                 <li>
-                    <h4>Long Provisioning</h4>
+                    <h3>Long Provisioning</h3>
                     <p>Provisioning has many steps which require high level of user comprehension.</p>
                 </li>
                 <li>
-                    <h4>User Comprehension</h4>
+                    <h3>User Comprehension</h3>
                     <p>App UI is text rich and requires high level of user comprehension.</p>
                 </li>
             </ol>
