--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -174,6 +174,9 @@ h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
 }
+.special ul li h3:before{
+    font-size: 0.68em;    
+} 
 h3 a{
 font-size: 0.68em;
 padding-left: 12px;
@@ -402,6 +405,9 @@ flex: 1;
   list-style-type: none;
 }
 .special ul li h3:before{
+    width: 30px;
+    line-height: 30px;
+    text-align: center;
     border-radius: 100px;
     display: inline-block;
     margin-right: 8px;
