--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -177,14 +177,6 @@ font-size: 1em;
 .special ul li h3:before{
     font-size: 0.68em;    
 } 
-h3 a{
-font-size: 0.68em;
-padding-left: 12px;
-letter-spacing: 0;
-display: inline-block;
-font-weight: normal;
-text-decoration: none;
-}
 a{
 text-decoration: none;
 }
@@ -296,6 +288,9 @@ width: 244px;
 /*/////////////////////////////////////////////////////////////*/
 .body{
     width: 768px;
+}
+.body h2{
+    margin-bottom: 12px;
 }
 .section{
 padding: 0 0 68px 0;
