--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -602,9 +602,27 @@ padding: 16px;
 
      <!-- Synthesis-->
      <div id="synthesis" class="section">
-        <div id="research" class="segment">
+        <div id="research" class="segment special">
             <h4>Research</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+            <ul>
+                <li>
+                    <h3>title</h3>
+                    <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
+                </li>
+                <li>
+                    <h3>title</h3>
+                    <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
+                </li>
+                <li>
+                    <h3>title</h3>
+                    <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
+                </li>
+                <li>
+                    <h3>title</h3>
+                    <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
+                </li>
+            </ul>
         </div>
         <div id="insights" class="segment">
             <h4>Insights</h4>
