--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -229,7 +229,7 @@ background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 2
 background: #88A4AA;
 }
 .special ul li{
-background-color: #E9E9ED;
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
 }
 .special.v1 ul li{
     background: rgba(255, 255, 255, 0.68);
@@ -708,10 +708,6 @@ padding: 16px;
 
     <!-- Summary -->
     <div id="summary" class="section">
-        <div id="outcomes" class="segment">
-            <h4>Outcomes</h4>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
-        </div>
         <div id="outcomes" class="segment special v1 v2">
             <h4>Outcomes</h4>
             <ul>
