--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -146,12 +146,6 @@ nav a {
 html, body {
   scroll-behavior: smooth;
 }
-.sticky{
-    height: 400px;
-    position: sticky;
-    top: 0; 
-    padding-top: 48px;
-}
 /*/////////////////////////////////////////////////////////////*/
 /* FONT SIZE */
 /*/////////////////////////////////////////////////////////////*/
@@ -425,6 +419,18 @@ flex: 1;
 }
 .special ul li:nth-child(4) h3:before{
     content: '4';
+}
+/*/////////////////////////////////////////////////////////////*/
+/* DESKTOP */
+/*/////////////////////////////////////////////////////////////*/
+@media only screen and (min-width: 993px) {
+.sticky{
+    height: 400px;
+    position: sticky;
+    top: 0; 
+    padding-top: 48px;
+}
+/*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
 /* TABLETS */
