--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -368,6 +368,25 @@ flex: 1;
 }
 /*/////////////////////////////////////////////////////////////*/
 
+/* GALLERY */
+
+/*/////////////////////////////////////////////////////////////*/
+.gallery-container {
+  overflow-x: auto;
+  white-space: nowrap;
+}
+.gallery {
+  display: inline-block;
+  white-space: nowrap;
+}
+.gallery .img{
+  display: inline-block;
+  width: 300px; 
+  padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
+  margin-right: 12px; 
+}
+/*/////////////////////////////////////////////////////////////*/
+
 /* SPECIAL */
 
 /*/////////////////////////////////////////////////////////////*/
@@ -633,9 +652,13 @@ padding: 16px;
         </div>
         <div id="insights" class="segment">
             <h4>Insights</h4>
-            <span class="img">
-                <img />
-            </span>
+            <div class="gallery-container">
+                <div class="gallery">
+                    <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
+                    <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
+                    <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
+                </div>
+              </div>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
         <div id="persona" class="segment">
