--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -298,8 +298,9 @@ border-style: solid;
 .segment{
 padding: 0 0 36px 0;
 }
-.segment h3{
-margin-bottom: 12px;
+.segment h3,
+.segment h4{
+margin-bottom: 8px;
 }
 .segment p{
 max-width: 668px;
