--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -152,11 +152,11 @@ html, body {
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
 }
-@media only screen and (max-width: 424px) {
+/*@media only screen and (max-width: 424px) {
 *, body, p, b, h1, h2, h3, h4{
 font-size: 8px;
 }
-}
+}*/
 h1,h2, h3,h4{
 font-weight: 700;
 line-height: 140%; 
@@ -178,7 +178,8 @@ a:hover{
 text-decoration: underline;
 }
 @media only screen and (max-width: 424px) {
-h4{ font-size: 1.8em;  }
+    h2{ font-size: 2.4em;  }
+    h4{ font-size: 1.8em;  }
 }
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
