--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -307,26 +307,6 @@ margin-bottom: 8px;
 max-width: 668px;
 margin: bottom 16px;
 }
-.segment .img{
-  position: relative;
-  width: 100%;
-  margin-bottom: 12px;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
-  display: block;
-  border-radius: 4px;
-}
-.segment .img span,
-.segment .img img {
-border: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-}
 /*/////////////////////////////////////////////////////////////*/
 /* SEGMENT */
 /*/////////////////////////////////////////////////////////////*/
@@ -374,6 +354,28 @@ flex: 1;
 /* GALLERY */
 
 /*/////////////////////////////////////////////////////////////*/
+.img{
+  position: relative;
+  width: 100%;
+  margin-bottom: 12px;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
+  display: block;
+  border-radius: 4px;
+}
+.wrap .img,
+.img span,
+.img img {
+border: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+}
+/*/////////////////////////////////////////////////////////////*/
 .gallery-container {
   overflow-x: auto;
   white-space: nowrap;
@@ -386,10 +388,6 @@ flex: 1;
   display: inline-block;
   width: 624px; 
   margin-right: 12px; 
-}
-.gallery .wrap .img{
-    width: 100%;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
 }
 /*/////////////////////////////////////////////////////////////*/
 
