--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -486,9 +486,11 @@ padding: 24px;
 .container{
 padding: 16px;
 }
+#pain-points ol,
 .special ul,
 #pain-points ol{
-    flex-direction: column;
+flex-direction: column;
+gap: 16px;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
