--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -660,13 +660,14 @@ gap: 16px;
         </div>
         <div id="insights" class="segment">
             <h4>Insights</h4>
+            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
             <div class="gallery-container">
                 <div class="gallery">
                     <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
                     <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
                     <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
               </div>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+            </div>
         </div>
         <div id="persona" class="segment">
             <h4>Persona</h4>
