--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -394,6 +394,9 @@ border: 0;
 /* SPECIAL */
 
 /*/////////////////////////////////////////////////////////////*/
+.special{
+    margin-bottom: 36px;
+}
 .special ul{
     display: flex;
     gap: 16px;
