--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -297,7 +297,7 @@ border-width: 0 0 1px 0;
 border-style: solid;
 }
 .segment{
-padding: 0 0 36px 0;
+margin: 0 0 36px 0;
 }
 .segment h3,
 .segment h4{
@@ -394,9 +394,6 @@ border: 0;
 /* SPECIAL */
 
 /*/////////////////////////////////////////////////////////////*/
-.special{
-    margin-bottom: 36px;
-}
 .special ul{
     display: flex;
     gap: 16px;
