--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -388,6 +388,7 @@ border: 0;
   display: inline-block;
   width: 624px; 
   margin-right: 12px; 
+  position: relative;
 }
 /*/////////////////////////////////////////////////////////////*/
 
