--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -486,11 +486,12 @@ padding: 24px;
 .container{
 padding: 16px;
 }
+#project ul,
 #pain-points ol,
 .special ul,
 #pain-points ol{
 flex-direction: column;
-gap: 16px;
+gap: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
