--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -370,6 +370,10 @@ border: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+.img,
+.img span,
+.img img {
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: auto 100%;
