--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -299,6 +299,9 @@ border-style: solid;
 .segment{
 margin: 0 0 36px 0;
 }
+.section .segment:last-of-type{
+    margin: 0;
+}
 .segment h3,
 .segment h4{
 margin-bottom: 8px;
