--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -520,6 +520,7 @@ gap: 12px;
         <a href="#problem">Problem</a>
         <a href="#pain-points">Pain Points</a>
         <a href="#goal">Goal</a>
+        <a href="#final-design">Final Design</a>
     </nav>
     <nav>
         <a href="#synthesis">Synthesis</a>
@@ -543,7 +544,6 @@ gap: 12px;
     </nav>
     <nav>
         <a href="#development">Development</a>
-        <a href="#final-design">Final Design</a>
         <a href="#design-handoff">Hand Off</a>
         <a href="#design-system">Design System</a>
     </nav>
@@ -640,6 +640,11 @@ gap: 12px;
                 </li>
             </ul>
         </div>
+        <div id="final-design" class="segment">
+            <h4>Final Design</h4>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
+            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
+        </div>
     </div>
     <!-- Definition END -->
 
@@ -729,10 +734,7 @@ gap: 12px;
 
     <!-- Development -->
     <div id="development" class="section">
-        <div id="final-design" class="segment">
-            <h4>Final Design</h4>
-            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
-        </div>
+
         <div id="design-handoff" class="segment">
             <h4>Design Handoff</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
