--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -476,7 +476,7 @@ display: none!important;
 }
 .container{
 padding: 40px;
-flex-direction: column;
+flex-direction: row;
 }
 .body{
 width: 100%;
@@ -566,7 +566,6 @@ gap: 12px;
     <div id="overview" class="section">
         <h2>Intial Experience Revamp</h2>
         <div id="project" class="segment">
-            <h4>Project</h4>
             <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
             <ul>
                 <li>
