--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -371,6 +371,14 @@ flex: 1;
 }
 /*/////////////////////////////////////////////////////////////*/
 
+/* PAIN POINTS */
+
+/*/////////////////////////////////////////////////////////////*/
+#context .img{
+    padding-bottom: 22%;
+}
+/*/////////////////////////////////////////////////////////////*/
+
 /* GALLERY */
 
 /*/////////////////////////////////////////////////////////////*/
@@ -605,6 +613,7 @@ gap: 12px;
         </div>
         <div id="context" class="segment">
             <h4>Context</h4>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.2.png);" ></span>
             <p>Senior and Low literacy users account for x% of the .</p>
         </div>
     </div>
@@ -639,19 +648,19 @@ gap: 12px;
             <h4>Success Metrics</h4>
             <ul>
                 <li>
-                    <h3>title</h3>
+                    <h3>Provisioning KPI</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>title</h3>
+                    <h3>Return User KPI</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>title</h3>
+                    <h3>User Notification Permission</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>title</h3>
+                    <h3>Interestes Completion</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
             </ul>
@@ -671,15 +680,15 @@ gap: 12px;
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
             <ul>
                 <li>
-                    <h3>title</h3>
+                    <h3>User Interviews</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>title</h3>
+                    <h3>Product Analytics</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>title</h3>
+                    <h3>Competitive Analysis</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
