--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -245,6 +245,9 @@ background: #88A4AA;
 .special.v1 ul li{
     background: rgba(255, 255, 255, 0.68);
 }
+.img.v1{
+    background-color: #FFF;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* BORDERS */
 /*/////////////////////////////////////////////////////////////*/
@@ -375,6 +378,7 @@ flex: 1;
 /*/////////////////////////////////////////////////////////////*/
 #context .img{
     padding-bottom: 22%;
+    background-size: 100% auto;
 }
 /*/////////////////////////////////////////////////////////////*/
 
@@ -612,7 +616,7 @@ gap: 12px;
         </div>
         <div id="context" class="segment">
             <h4>Context</h4>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.2.png);" ></span>
+            <span class="img v1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.2.png);" ></span>
             <p>Senior and Low literacy users account for x% of the .</p>
         </div>
     </div>
