--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -316,7 +316,7 @@ border-width: 0 0 1px 0;
 border-style: solid;
 }
 .segment{
-margin: 0 0 36px 0;
+padding-bottom: 36px;
 }
 .section .segment:last-of-type{
     margin: 0;
@@ -430,6 +430,9 @@ border: 0;
 /* SPECIAL */
 
 /*/////////////////////////////////////////////////////////////*/
+.special{
+    margin-bottom: 36px;
+}
 .special ul{
     display: flex;
     gap: 16px;
