--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -377,7 +377,7 @@ flex: 1;
 
 /*/////////////////////////////////////////////////////////////*/
 #context .img{
-    padding-bottom: 22%;
+    padding-bottom: 24%;
     background-size: 100% auto;
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -520,7 +520,7 @@ padding: 24px;
 /*/////////////////////////////////////////////////////////////*/
 /* MOBILES */
 /*/////////////////////////////////////////////////////////////*/
-@media only screen} and (max-width: 576px) {
+@media only screen and (max-width: 576px) {
 .container{
 padding: 16px;
 }
