--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -451,7 +451,6 @@ border: 0;
   align-content: space-between;
 }
 .special ul li{
-  width: calc(50% - 50px); /* Adjust the width as needed */
   margin-bottom: 16px; /* Adjust the margin as needed */
   padding: 20px;
   border-radius: 4px;
@@ -489,6 +488,14 @@ border: 0;
     position: sticky;
     top: 0; 
     padding-top: 48px;
+}
+/*/////////////////////////////////////////////////////////////*/
+}
+/*/////////////////////////////////////////////////////////////*/
+/* >= TABLETS */
+/*/////////////////////////////////////////////////////////////*/
+.special ul li{
+  width: calc(50% - 50px); /* Adjust the width as needed */
 }
 /*/////////////////////////////////////////////////////////////*/
 }
