--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -373,7 +373,7 @@ flex: 1;
 }
 /*/////////////////////////////////////////////////////////////*/
 
-/* PAIN POINTS */
+/* CONTEXT */
 
 /*/////////////////////////////////////////////////////////////*/
 #context .img{
@@ -420,7 +420,7 @@ border: 0;
 }
 .gallery .wrap{
   display: inline-block;
-  width: 624px; 
+  width: 76%; 
   margin-right: 12px; 
   position: relative;
 }
