--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -492,8 +492,9 @@ border: 0;
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
-/* >= TABLETS */
+/* >= SM TABLETS */
 /*/////////////////////////////////////////////////////////////*/
+@media only screen and (min-width: 769px) {
 .special ul li{
   width: calc(50% - 50px); /* Adjust the width as needed */
 }
