--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -437,13 +437,6 @@ border: 0;
     display: flex;
     gap: 16px;
 }
-.special.v1{
-    padding: 24px;
-    border-radius: 4px;
-}
-.special > p{
-    margin-bottom: 36px;
-}
 .special ul{
   display: flex;
   flex-wrap: wrap;
@@ -455,9 +448,6 @@ border: 0;
   padding: 20px;
   border-radius: 4px;
   list-style-type: none;
-}
-.special.v2 ul li{
-    width: calc(33% - 50px); /* Adjust the width as needed */
 }
 .special ul li h3:before{
     width: 20px;
@@ -478,6 +468,18 @@ border: 0;
 }
 .special ul li:nth-child(4) h3:before{
     content: '4';
+}
+/*/////////////////////////////////////////////////////////////*/
+.special.v1{
+    padding: 24px;
+    border-radius: 4px;
+}
+.special.v1 > p{
+    margin-bottom: 36px;
+}
+/*/////////////////////////////////////////////////////////////*/
+.special.v2 ul li{
+    width: calc(33% - 50px); /* Adjust the width as needed */
 }
 /*/////////////////////////////////////////////////////////////*/
 /* DESKTOP */
@@ -509,7 +511,7 @@ display: none!important;
 }
 .container{
 padding: 40px;
-flex-direction: row;
+flex-direction: column;
 }
 .body{
 width: 100%;
