--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -27,6 +27,12 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
  $(document).ready(function() {
+
+    $(".container").css("display", "none"); // Ensure container is hidden initially
+  $(window).on("load", function() {
+    $(".container").fadeIn(800); // Fade in the container with ease
+  });
+
   var stickyElement = $('.sticky-element');
   var initialOffset = stickyElement.offset().top;
 
@@ -548,7 +554,7 @@ gap: 12px;
 <body>
 <div class="container">
 <div class="navi sticky-element">
-    <a href="/casestudies/" class="back"><span class="icn material-icons">arrow_back</span></a>
+    <a href="https://peteroper.github.io/portfolio/casestudies/" class="back"><span class="icn material-icons">arrow_back</span></a>
     <nav class="selected">
         <a href="#overview" class="selected">Overview</a>
         <a href="#project">Project</a>
