--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -228,7 +228,7 @@ color: #000;
 .special ul li h3:before{
 color: #FFF;
 }
-.special > p,
+.special.v1 > p,
 h3,
 .navi nav.selected a:first-of-type,
 .navi nav .selected{
@@ -443,6 +443,9 @@ border: 0;
 .special{
     margin-bottom: 36px;
 }
+.special > p{
+    margin-bottom: 12px;
+}
 .special ul{
     display: flex;
     gap: 16px;
@@ -484,9 +487,6 @@ border: 0;
     padding: 24px;
     border-radius: 4px;
 }
-.special.v1 > p{
-    margin-bottom: 36px;
-}
 /*/////////////////////////////////////////////////////////////*/
 /* DESKTOP */
 /*/////////////////////////////////////////////////////////////*/
@@ -496,6 +496,9 @@ border: 0;
     position: sticky;
     top: 0; 
     padding-top: 48px;
+}
+.special.v1 > p{
+    margin-bottom: 36px;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
@@ -548,7 +551,7 @@ padding: 16px;
 .special ul,
 #pain-points ol{
 flex-direction: column;
-gap: 12px;
+gap: 8px;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
