--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -32,7 +32,7 @@
   $(window).on("load", function() {
     $(".body").fadeIn(800); 
     setTimeout(function() {
-        $(".container").fadeIn(800); 
+        $(".navi").fadeIn(800); 
     }, 600);
   });
 
