--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -28,11 +28,11 @@
 <script>
  $(document).ready(function() {
 
-  $(".body, .navi").css("display", "none"); // Ensure container is hidden initially
+  $(".body, .navi .nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
   $(window).on("load", function() {
     $(".body").fadeIn(800); 
     setTimeout(function() {
-        $(".navi").fadeIn(800); 
+        $(".navi nav, .navi .back").fadeIn(800); 
     }, 600);
   });
 
