--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -28,13 +28,14 @@
 <script>
  $(document).ready(function() {
   
-    $(".body, .navi").css("display", "none"); // Ensure container is hidden initially
+    $(".body, .navi .nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
   $(window).on("load", function() {
     $(".body").fadeIn(800); 
     setTimeout(function() {
-        $(".navi").fadeIn(800); 
+        $(".navi nav, .navi .back").fadeIn(800); 
     }, 600);
   });
+
 
   var stickyElement = $('.sticky-element');
   var initialOffset = stickyElement.offset().top;
