--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -339,153 +339,177 @@ margin-bottom: 8px;
 max-width: 668px;
 margin: bottom 16px;
 }
-/*/////////////////////////////////////////////////////////////*/
-/* SEGMENT */
-/*/////////////////////////////////////////////////////////////*/
-
-/* PROJECT */
 
 /*/////////////////////////////////////////////////////////////*/
-#project ul{
-    padding-top: 36px;
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
+/* INTRO */
+/*/////////////////////////////////////////////////////////////*/
+#intro p{
+margin: 0 0 8px 0;
 }
-#project ul li{
-flex: 1;
+#intro p:last-of-type{
+margin: 16px 0 0 0;
 }
-#project ul h4{
-    margin-bottom: 4px;
+#intro p b{
+display: block;
+margin: 0 0 12px 0;
 }
-#project ul span{
-    width: 30px;
-    line-height: 30px;
-    text-align: center;
+/*/////////////////////////////////////////////////////////////*/
+/* POSTS */
+/*/////////////////////////////////////////////////////////////*/
+#posts{
+    position: relative;
+}
+#posts .post,
+#posts .post > div{
+gap: 24px;
+}
+#posts .post{
+display: flex;
+margin-bottom: 12px;
+/*align-items: center;*/
+flex: 1 0 0;
+}
+#posts .post:last-of-type{
+margin-bottom: 0;
+}
+#posts .post > div{
+display: flex;
+align-items: center;
+flex: 1 0 0;
+}
+#posts .post div div{
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+flex: 1 0 0;
+}
+#posts .post .img,
+#posts .post img{
+width: 104px;
+padding-bottom: 8%;
+display: block;
+background-size: auto 100%;
+}
+#posts p{
+display: flex;
+flex-direction: column;
+align-self: stretch;
+}
+#posts .icn{
+width: 20px;
+height: 20px;
+}
+#posts .tab-container.tab-selected{
+    flex-direction: column;
+}
+#posts nav{
+    position: absolute;
+    top: -1px;
+    right: 0;
+}
+#posts nav a{
     display: inline-block;
-    border-radius: 100px;
-    margin-right: 2px;
-}
-/*/////////////////////////////////////////////////////////////*/
-
-/* PAIN POINTS */
-
-/*/////////////////////////////////////////////////////////////*/
-#pain-points ol{
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-    align-content: space-between;
-    gap: 24px;
-}
-#pain-points ol li{
-flex: 1;
-}
-/*/////////////////////////////////////////////////////////////*/
-
-/* CONTEXT */
-
-/*/////////////////////////////////////////////////////////////*/
-#context .img{
-    padding-bottom: 24%;
-    background-size: 100% auto;
-}
-/*/////////////////////////////////////////////////////////////*/
-
-/* GALLERY */
-
-/*/////////////////////////////////////////////////////////////*/
-.img{
-  position: relative;
-  width: 100%;
-  margin-bottom: 12px;
-  padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
-  display: block;
-  border-radius: 4px;
-}
-.img span,
-.img img {
-border: 0;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-.img,
-.img span,
-.img img {
-  background-position: 50%;
-  background-repeat: no-repeat;
-  background-size: auto 100%;
-}
-/*/////////////////////////////////////////////////////////////*/
-.gallery-container {
-  overflow-x: auto;
-  white-space: nowrap;
-}
-.gallery {
-  display: inline-block;
-  white-space: nowrap;
-}
-.gallery .wrap{
-  display: inline-block;
-  width: 76%; 
-  margin-right: 12px; 
-  position: relative;
-}
-
-/*/////////////////////////////////////////////////////////////*/
-
-/* SPECIAL */
-
-/*/////////////////////////////////////////////////////////////*/
-.special{
-    margin-bottom: 36px;
-}
-.special ul{
-    display: flex;
-    gap: 16px;
-}
-.special ul{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-content: space-between;
-}
-.special ul li{
-  margin-bottom: 16px; /* Adjust the margin as needed */
-  padding: 20px;
-  border-radius: 4px;
-  list-style-type: none;
-}
-.special ul li h3:before{
-    width: 20px;
-    line-height: 20px;
+    width: 36px;
+    line-height: 36px;
     text-align: center;
-    border-radius: 4px;
-    display: inline-block;
-    margin-right: 8px;
-}
-.special ul li:nth-child(1) h3:before{
-    content: '1';
-}
-.special ul li:nth-child(2) h3:before{
-    content: '2';
-}
-.special ul li:nth-child(3) h3:before{
-    content: '3';
-}
-.special ul li:nth-child(4) h3:before{
-    content: '4';
+    margin: 0 0 0 4px;
+    text-decoration: none;
 }
 /*/////////////////////////////////////////////////////////////*/
-.special.v1{
-    padding: 24px;
-    border-radius: 4px;
+/* SLIDER */
+/*/////////////////////////////////////////////////////////////*/
+#sliders{
+width: 100%;
+overflow: hidden;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+gap: 24px;
 }
-.special.v1 > p{
-    margin-bottom: 36px;
+#sliders > div{
+width: 100%;
+}
+#sliders p{
+margin-bottom: 16px;
+}
+.slider{
+width: 100%;
+height: 228px;
+padding-bottom: 28px;
+overflow-x: auto;
+overflow-y: hidden;
+-webkit-overflow-scrolling: touch;
+overflow: -moz-scrollbars-horizontal;
+white-space: nowrap;
+position: relative;
+}
+.slider ul{
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+}
+.slider li{
+width: 398px;
+margin-right: 12px;
+display: inline-block;
+vertical-align: top;
+}
+ .slider .img,
+.slider img{
+display: block;
+width: 100%;
+padding-bottom: 56%;
+background-size: 100% auto;
+}
+/*/////////////////////////////////////////////////////////////*/
+/* SHOWCASE */
+/*/////////////////////////////////////////////////////////////*/
+#showcase nav{
+margin: 0 0 16px 0;
+display: flex;
+gap: 8px;
+}
+#showcase nav a{
+line-height: 48px;
+padding: 0 16px; 
+text-decoration: none;
+}
+#showcase nav a.selected{
+border-width: 1px;
+}
+/*/////////////////////////////////////////////////////////////*/
+#showcase .scrollable{
+width: 100%;
+height: 540px;
+flex-shrink: 0;
+overflow-x: auto;
+overflow-y: hidden;
+-webkit-overflow-scrolling: touch;
+overflow: -moz-scrollbars-horizontal;
+position: relative;
+}
+#showcase .scrollable > div{
+height: 100%;
+padding-right: 40px;
+display: flex;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+}
+.tab-container{
+display: none!important;
+}
+.tab-container.tab-selected{
+display: flex!important;
+}
+#showcase .tab-container div{
+padding: 40px;
+}
+#showcase .tab-container div p{
+width: 440px;
+margin-bottom: 12px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* DESKTOP */
