--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -287,6 +287,7 @@ width: 244px;
     padding: 0 0 0 12px;
     display: none;
 }
+.navi nav.links a,
 .navi nav a:first-of-type,
 .navi nav.selected a{
     display: block;
