--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -261,6 +261,7 @@ background: #88A4AA;
 /*/////////////////////////////////////////////////////////////*/
 /* BORDERS */
 /*/////////////////////////////////////////////////////////////*/
+.navi nav.links,
 .section{
     border-color: #D5D5D5;
 }
@@ -310,6 +311,11 @@ width: 244px;
     line-height: 36px;
     text-align: center;
     display: block;
+}
+.navi nav.links{
+    padding: 16px 0 0 0;
+    border-width: 1px 0 0 0;
+    border-style: solid;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
